# wasm-webrtc-demo

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: app.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
