[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use-udp = [ "naia-server-socket/use-udp" ]
use-webrtc = [ "naia-server-socket/use-webrtc" ]

[dependencies]
bevy = "0.6.1"
naia-server-socket = "0.8"
shared = { path = "../shared" }
